--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -6,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GravityMine | Servidor Oficial</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&family=Silkscreen:wght@400;700&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
             --mc-green: #22c55e;
@@ -28,7 +27,10 @@
             font-family: 'VT323', monospace;
         }
 
-        /* Fixed background with low opacity grass pattern */
+        .font-minecraft {
+            font-family: 'Silkscreen', cursive;
+        }
+
         .bg-pattern {
             position: fixed;
             top: 0;
@@ -42,7 +44,6 @@
             z-index: -1;
         }
 
-        /* Glassmorphism Navigation */
         .glass-nav {
             background: rgba(8, 8, 8, 0.75);
             backdrop-filter: blur(20px);
@@ -50,7 +51,6 @@
             transition: all 0.4s ease;
         }
 
-        /* Professional Modern Button with Gradient */
         .minecraft-btn-modern {
             background: linear-gradient(135deg, #22c55e 0%, #15803d 100%);
             box-shadow: 0 4px 20px var(--mc-green-glow);
@@ -69,7 +69,6 @@
             filter: brightness(1.1);
         }
 
-        /* Premium Dark Card Style */
         .card-dark {
             background: var(--mc-surface);
             border: 1px solid var(--mc-border);
@@ -105,12 +104,10 @@
             animation: fadeInUp 1s cubic-bezier(0.4, 0, 0.2, 1) forwards;
         }
 
-        /* Optimized images for pixel art */
         .pixelated {
             image-rendering: pixelated;
         }
 
-        /* Scrollbar customization */
         ::-webkit-scrollbar {
             width: 10px;
         }
@@ -127,17 +124,20 @@
         }
     </style>
     <script type="importmap">
-    {
-      "imports": {
-        "react/": "https://esm.sh/react@^19.2.3/",
-        "react": "https://esm.sh/react@^19.2.3",
-        "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+  }
+}
+</script>
 </head>
 <body>
     <div class="bg-pattern"></div>
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
 </body>
 </html>
