--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GravityMine | Servidor Oficial</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=VT323&family=Silkscreen:wght@400;700&family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&family=Silkscreen:wght@400;700&family=Inter:wght@300;400;500;600;700;800&family=Pixelify+Sans:wght@400;700&family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
         :root {
             --mc-green: #22c55e;
@@ -29,6 +29,23 @@
 
         .font-minecraft {
             font-family: 'Silkscreen', cursive;
+        }
+
+        /* Clase para títulos épicos profesionales */
+        .font-epic-title {
+            font-family: 'Pixelify Sans', sans-serif;
+            text-transform: uppercase;
+            letter-spacing: 0.12em;
+            /* Sombra pixelada de profundidad */
+            text-shadow: 4px 4px 0px rgba(0, 0, 0, 0.8), 
+                         0 0 20px rgba(34, 197, 94, 0.2);
+            line-height: 1.2;
+        }
+
+        .font-hero-title {
+            font-family: 'Pixelify Sans', sans-serif;
+            letter-spacing: 0.05em;
+            text-shadow: 6px 6px 0px rgba(21, 128, 61, 0.9);
         }
 
         .bg-pattern {
